chore: atualização do layout da aplicação

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Essa aplicação é uma lista de contatos feita com React!"
     />
-    <title>React App</title>
+    <title>Lista de Contatos</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
